Add more functionality and fix bugs

--- a/src/AppBundle/Resources/views/security/all_user.html.twig
+++ b/src/AppBundle/Resources/views/security/all_user.html.twig
@@ -1,5 +1,9 @@
 {% extends '@basic/base.html.twig' %}
 
+{% block title %}
+    <title>Users-Online Shop</title>
+{% endblock %}
+
 {% block sidebar %}
 
 {% endblock %}
