--- a/src/AppBundle/Resources/views/security/change_password.html.twig
+++ b/src/AppBundle/Resources/views/security/change_password.html.twig
@@ -1,5 +1,9 @@
 {% extends '@basic/base.html.twig' %}
 
+{% block title %}
+    <title>Change password-Online Shop</title>
+{% endblock %}
+
 {% block body %}
     <div class="span9">
         <h2>Change password</h2>
