--- a/src/AppBundle/Resources/views/security/register.html.twig
+++ b/src/AppBundle/Resources/views/security/register.html.twig
@@ -1,7 +1,9 @@
 {% extends '@basic/base.html.twig' %}
-{% block carousel %}
 
+{% block title %}
+    <title>Register-Online Shop</title>
 {% endblock %}
+
 {% block body %}
     <div class="span9">
         <ul class="breadcrumb">
