--- a/src/ShopBundle/Resources/views/order/order_details.html.twig
+++ b/src/ShopBundle/Resources/views/order/order_details.html.twig
@@ -1,5 +1,9 @@
 {% extends '@App/base.html.twig' %}
 
+{% block title %}
+    <title>My Order-Online Shop</title>
+{% endblock %}
+
 {% block sidebar %}
 
 {% endblock %}
