--- a/src/ShopBundle/Resources/views/product_users/new_product.html.twig
+++ b/src/ShopBundle/Resources/views/product_users/new_product.html.twig
@@ -1,5 +1,9 @@
 {% extends '@App/base.html.twig' %}
 
+{% block title %}
+    <title>Create product-Online Shop</title>
+{% endblock %}
+
 {% block sidebar %}
 
 {% endblock %}
