--- a/src/AppBundle/Resources/views/base.html.twig
+++ b/src/AppBundle/Resources/views/base.html.twig
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Online Shop</title>
+    {% block title %}
+        <title>Online Shop</title>
+    {% endblock %}
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
