--- a/src/AppBundle/Resources/views/security/login.html.twig
+++ b/src/AppBundle/Resources/views/security/login.html.twig
@@ -1,8 +1,13 @@
 {% extends '@basic/base.html.twig' %}
+
+{% block title %}
+    <title>Login-Online Shop</title>
+{% endblock %}
+
 {% block body %}
     <div class="span9">
     <ul class="breadcrumb">
-        <li><a href="index.html">Home</a> <span class="divider">/</span></li>
+        <li><a href="{{ path('home_page') }}">Home</a> <span class="divider">/</span></li>
         <li class="active">Login</li>
     </ul>
     <h3> Login</h3>
