--- a/src/AppBundle/Resources/views/security/view_user_profile.html.twig
+++ b/src/AppBundle/Resources/views/security/view_user_profile.html.twig
@@ -1,9 +1,13 @@
 {% extends '@basic/base.html.twig' %}
 
+{% block title %}
+    <title>My profile-Online Shop</title>
+{% endblock %}
+
 {% block body %}
     <div class="span9">
 
-    <h2>Forgot password</h2>
+    <h2>Profile view</h2>
         <div class="well">
             <ul>
                 <li>Your username : {{ user.username }}</li>
