--- a/src/ShopBundle/Resources/views/productcategory/index.htm.twig
+++ b/src/ShopBundle/Resources/views/productcategory/index.htm.twig
@@ -1,5 +1,9 @@
 {% extends '@App/base.html.twig' %}
 
+{% block title %}
+    <title>Categories</title>
+{% endblock %}
+
 {% block sidebar %}
 
 {% endblock %}
