--- a/src/AppBundle/Resources/views/security/change_password.html.twig
+++ b/src/AppBundle/Resources/views/security/change_password.html.twig
@@ -8,11 +8,16 @@
     <div class="span9">
         <h2>Change password</h2>
 
-        <div class="well">
+        {% for message in app.flashes('error') %}
+            <div class="alert alert-error">
+                {{ message }}
+            </div>
+        {% endfor %}
 
-        {{ form_start(form) }}
+        <div class="well">
+            {{ form_start(form) }}
             {{ form_widget(form) }}
-        {{ form_end(form) }}
+            {{ form_end(form) }}
         </div>
     </div>
 {% endblock %}
