--- a/src/AppBundle/Resources/views/security/forgot_password.html.twig
+++ b/src/AppBundle/Resources/views/security/forgot_password.html.twig
@@ -6,8 +6,14 @@
 
 {% block body %}
     <div class="span9">
+        <h2>Forgot password</h2>
 
-    <h2>Forgot password</h2>
+        {% for message in app.flashes('error') %}
+            <div class="alert alert-error">
+                {{ message }}
+            </div>
+        {% endfor %}
+
         <div class="well">
             <p>Please insert your username and email !</p>
             {{ form(form) }}
