--- a/src/AppBundle/Resources/views/security/login.html.twig
+++ b/src/AppBundle/Resources/views/security/login.html.twig
@@ -10,6 +10,13 @@
         <li><a href="{{ path('home_page') }}">Home</a> <span class="divider">/</span></li>
         <li class="active">Login</li>
     </ul>
+
+    {% for message in app.flashes('success') %}
+        <div class="alert alert-success">
+            {{ message }}
+        </div>
+    {% endfor %}
+
     <h3> Login</h3>
     <hr class="soft"/>
 
@@ -18,7 +25,7 @@
             <div class="well">
 
                 {% if error %}
-                    <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+                    <div class="alert alert-error">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
                 {% endif %}
 
                 <form action="{{ path('login') }}" method="post" name="form_login">
@@ -38,7 +45,10 @@
                     <button class="btn btn-success" type="submit">Login !</button>
                 </form>
 
-                <p><a href="{{ path('forgot_password') }}">Forgot your password !</a></p>
+                <p>
+                    <span class="form-links"><a href="{{ path('forgot_password') }}">Forgot your password !</a></span>
+                    <span class="form-links"><a href="{{ path('user_register') }}">Registration !</a></span>
+                </p>
             </div>
         </div>
     </div>
