--- a/src/AppBundle/Resources/views/security/register.html.twig
+++ b/src/AppBundle/Resources/views/security/register.html.twig
@@ -15,14 +15,14 @@
 
                 {{ form_start(form) }}
                    <p>Required field &nbsp;<sup style="color: red">*</sup> </p>
-                    {{ form_row(form.username,{'help':' Username must be 3 or more symbols !'}) }}
+                    {{ form_row(form.username,{'help':'Username must be 3 or more symbols !'}) }}
                     {{ form_row(form.firstName) }}
                     {{ form_row(form.lastName) }}
                     {{ form_row(form.email) }}
-                    {{ form_row(form.plainPassword) }}
-                    {{ form_row(form.address.city) }}
-                    {{ form_row(form.address.shipAddress) }}
-                    {{ form_row(form.address.phoneNumber) }}
+                    {{ form_row(form.plainPassword,{'help':'Password must be 6 or more symbols !'}) }}
+                    {{ form_row(form.address.city,{'help':'City name must be 2 or more symbols !'}) }}
+                    {{ form_row(form.address.shipAddress,{'help':'Ship address must be 3 or more symbols !'}) }}
+                    {{ form_row(form.address.phoneNumber,{'help':'Phone number must be 4 to 20 symbols !'}) }}
 
                    <input class="btn btn-large btn-success" type="submit" value="Register !">
                 {{ form_end(form) }}
