--- a/src/AppBundle/Resources/views/security/view_user_profile.html.twig
+++ b/src/AppBundle/Resources/views/security/view_user_profile.html.twig
@@ -8,6 +8,13 @@
     <div class="span9">
 
     <h2>Profile view</h2>
+
+        {% for message in app.flashes('success') %}
+            <div class="alert alert-success">
+                {{ message }}
+            </div>
+        {% endfor %}
+
         <div class="well">
             <ul>
                 <li>Your username : {{ user.username }}</li>
