--- a/web/themes/css/base.css
+++ b/web/themes/css/base.css
@@ -74,6 +74,17 @@
 .navbar .nav.pull-right, #sideManu {overflow:hidden;}
 #logoArea  #smallScreen {margin: 21px 14px 0 0;}
 .navbar-search {margin-top: 8px;}
+span.text-warning {padding-left: 20px}
+.form-links {
+ font-family: 'Cabin', Verdana, sans-serif;
+ font-size: 1.3em;
+ color: #333333;
+ padding: 5px 10px;
+}
+.form-links:hover {
+ background: #c5c5c5;
+}
+
 /* Responsive--------------------- */
 /* Large desktop */
 @media (min-width: 1200px) {  }
