--- a/src/ShopBundle/Resources/views/product/personal_cart.html.twig
+++ b/src/ShopBundle/Resources/views/product/personal_cart.html.twig
@@ -40,7 +40,7 @@
                         </td>
                         <td>{{ product.price }} &euro;</td>
                         <td>
-                                {{ product.promotion.discount* product.price|number_format(2,'.',' ') }} &euro;
+                              {#  {{ product.promotion.discount* product.price|number_format(2,'.',' ') }} &euro; #}
                             
                         </td>
                         <td>-</td>
