Add more functionality and fix bugs

--- a/src/AppBundle/Resources/views/security/forgot_password.html.twig
+++ b/src/AppBundle/Resources/views/security/forgot_password.html.twig
@@ -15,8 +15,12 @@
         {% endfor %}
 
         <div class="well">
-            <p>Please insert your username and email !</p>
-            {{ form(form) }}
+            <p>Please insert your email !</p>
+            {{ form_start(form) }}
+                {{ form_widget(form) }}
+                <a class="btn btn-large btn-default" href="{{ path('login') }}">Cancel</a>
+                <input class="btn btn-large btn-success" type="submit" value="Submit !">
+            {{ form_end(form) }}
         </div>
     </div>
 {% endblock %}
