--- a/src/AppBundle/Resources/views/security/change_password.html.twig
+++ b/src/AppBundle/Resources/views/security/change_password.html.twig
@@ -17,6 +17,8 @@
         <div class="well">
             {{ form_start(form) }}
             {{ form_widget(form) }}
+            <a class="btn btn-large btn-default" href="{{ path('my_profile',{'id':app.user.id}) }}">Cancel</a>
+            <input class="btn btn-large btn-success" type="submit" value="Save !">
             {{ form_end(form) }}
         </div>
     </div>
