--- a/src/AppBundle/Resources/views/security/all_user.html.twig
+++ b/src/AppBundle/Resources/views/security/all_user.html.twig
@@ -18,6 +18,11 @@
         <h2> Preview all users</h2>
         <div class="container">
                 <h3>Users</h3>
+            {% for message in app.flashes('success') %}
+                <div class="alert alert-success">
+                    {{ message }}
+                </div>
+            {% endfor %}
             <table class="table table-hover">
                 <thead>
                 <tr>
