--- a/src/AppBundle/Resources/views/security/add_role.html.twig
+++ b/src/AppBundle/Resources/views/security/add_role.html.twig
@@ -8,6 +8,7 @@
             <li class="active">Add_role</li>
         </ul>
         <h2>Available Role</h2>
+        {% include '@App/notise.html.twig' %}
         <div class="container">
             <table class="table-hover">
                 <thead>
