--- a/src/AppBundle/Resources/views/security/all_user.html.twig
+++ b/src/AppBundle/Resources/views/security/all_user.html.twig
@@ -18,10 +18,12 @@
         <h2> Preview all users</h2>
         <div class="container">
                 <h3>Users</h3>
-            {% for message in app.flashes('success') %}
-                <div class="alert alert-success">
-                    {{ message }}
-                </div>
+            {% for label, messages in app.flashes(['error','success']) %}
+                {% for message in messages %}
+                    <div class="alert alert-{{ label }}">
+                        {{ message }}
+                    </div>
+                {% endfor %}
             {% endfor %}
             <table class="table table-hover">
                 <thead>
@@ -60,9 +62,8 @@
                         </td>
                         <td>
                             <a class="btn btn-warning" href="{{ path('user_edit',{'id':user.id}) }}">Edit!</a>
-                            <a class="btn btn-danger" href="{{ path('user_delete',{'id':user.id}) }}">Delete!</a>
-                            <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#exampleModal">
-                                 Delete Modal
+                            <button  type="button" data-id="{{ user.id }}" class="btn btn-danger" data-toggle="modal" data-target="#exampleModal">
+                                 Delete !
                             </button>
 
                         </td>
@@ -74,4 +75,15 @@
         </div>
     </div>
     {% include '@basic/security/delete_modal.html.twig' %}
+{% endblock %}
+
+{% block javascript %}
+{{ parent() }}
+ <script >
+     var btn = $("[type='button']");
+     btn.on('click',function() {
+         var userId = $(this).data('id');
+         $('#delete_link').attr('href',userId+"/delete_user");
+     })
+</script>
 {% endblock %}
