--- a/src/AppBundle/Resources/views/security/change_password.html.twig
+++ b/src/AppBundle/Resources/views/security/change_password.html.twig
@@ -7,13 +7,7 @@
 {% block body %}
     <div class="span9">
         <h2>Change password</h2>
-
-        {% for message in app.flashes('error') %}
-            <div class="alert alert-error">
-                {{ message }}
-            </div>
-        {% endfor %}
-
+        {% include '@App/notise.html.twig' %}
         <div class="well">
             {{ form_start(form) }}
             {{ form_widget(form) }}
