--- a/src/AppBundle/Resources/views/security/delete_modal.html.twig
+++ b/src/AppBundle/Resources/views/security/delete_modal.html.twig
@@ -8,11 +8,11 @@
                 </button>
             </div>
             <div class="modal-body">
-                <p>Do you wont delete this user</p>
+                <p>do you want to delete this user !</p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-danger" data-dismiss="modal" >Yes</button>
-                <button type="button" class="btn btn-primary" data-dismiss="modal" aria-label="Close">No</button>
+                <a id="delete_link" class="btn btn-danger" href="#">Yes</a>
+                <button  class="btn btn-primary" data-dismiss="modal" aria-label="Close">No</button>
             </div>
         </div>
     </div>
